adjusted itinerary service tests